[package]
name = "two"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
[dev-dependencies]
# criterion = "0.3.5"

[build-dependencies]
build-util = { path = "../build-util" }

# [[bench]]
# name = "first"
# harness = false

# [[bench]]
# name = "second"
# harness = false